--- a/app/src/main/res/layout/fragment_tao_bao.xml
+++ b/app/src/main/res/layout/fragment_tao_bao.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/fragment_tao_bao_clt"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/fragment_tao_bao_clt">
+    android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/fragment_tao_bao_title"
@@ -12,163 +11,148 @@
         android:layout_height="wrap_content"
         android:background="@drawable/base_title_background"
         app:elevation="0dp">
+
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_15"
-            app:layout_scrollFlags="scroll"
             android:paddingTop="@dimen/dp_15"
-            android:layout_height="wrap_content">
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/dp_14"
+            app:layout_scrollFlags="scroll">
+
             <RelativeLayout
                 android:id="@+id/fragment_tao_bao_search"
-                android:layout_width="@dimen/dp_270"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="@dimen/dp_34"
-                android:layout_marginLeft="@dimen/dp_15"
                 android:layout_gravity="center_vertical"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
+                android:layout_marginStart="@dimen/dp_15"
+                android:layout_marginLeft="@dimen/dp_15"
                 android:background="@drawable/base_search_shape"
-                android:layout_marginStart="@dimen/dp_15">
+                android:focusable="true"
+                android:focusableInTouchMode="true">
+
                 <ImageView
+                    android:id="@+id/iv_leftSearch"
                     android:layout_width="@dimen/dp_17"
                     android:layout_height="@dimen/dp_17"
                     android:layout_centerVertical="true"
+                    android:layout_marginStart="@dimen/dp_10"
                     android:layout_marginLeft="@dimen/dp_10"
-                    android:src="@mipmap/main_search_icon"
-                    android:layout_marginStart="@dimen/dp_10" />
+                    android:src="@mipmap/main_search_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:textSize="@dimen/sp_10"
+                    android:layout_toRightOf="@+id/iv_leftSearch"
+                    android:text="两步省钱①复制淘宝标题②打开无限淘"
+                    android:textColor="@color/color_C1BBBB" />
+
                 <com.gongwen.marqueen.SimpleMarqueeView
                     android:id="@+id/fragment_tao_bao_key"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/sp_14"
                     android:layout_centerVertical="true"
+                    android:layout_marginStart="@dimen/dp_30"
                     android:layout_marginLeft="@dimen/dp_30"
                     android:flipInterval="2000"
                     android:inAnimation="@anim/in_bottom"
                     android:outAnimation="@anim/out_top"
+                    android:textColor="#C1BBBB"
+                    android:textSize="@dimen/sp_14"
                     app:marqueeAnimDuration="2000"
                     app:smvTextColor="#C1BBBB"
                     app:smvTextEllipsize="end"
                     app:smvTextSingleLine="true"
-                    app:smvTextSize="@dimen/sp_13"
-                    android:textColor="#C1BBBB"
-                    android:layout_marginStart="@dimen/dp_30" />
+                    app:smvTextSize="@dimen/sp_13" />
+
+                <com.wuxiantao.wxt.ui.custom.button.StateButton
+                    android:id="@+id/sbt_search"
+                    android:layout_width="@dimen/dp_49"
+                    android:layout_height="@dimen/dp_23"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/dp_8"
+                    android:gravity="center"
+                    android:padding="0dp"
+                    android:text="搜券"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_13"
+                    app:normalBackgroundCenterColor="#FD6F57"
+                    app:normalBackgroundEndColor="#FA5758"
+                    app:normalBackgroundStartColor="#FD6F57"
+                    app:pressedBackgroundColor="#FD6F57"
+                    app:normalOrientation="BL_TR"
+                    app:normalShapeType="LINEAR_GRADIENT"
+                    app:round="true" />
+
             </RelativeLayout>
+
             <LinearLayout
                 android:id="@+id/fragment_tao_bao_save_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_marginStart="@dimen/dp_18"
                 android:layout_marginLeft="@dimen/dp_20"
-                android:layout_marginStart="@dimen/dp_20">
+                android:orientation="vertical">
+
                 <ImageView
                     android:layout_width="@dimen/dp_29"
                     android:layout_height="@dimen/dp_26"
                     android:layout_gravity="center_horizontal"
-                    android:src="@mipmap/main_money_saving_tutorial"/>
+                    android:src="@mipmap/main_money_saving_tutorial" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/sp_10"
+                    android:text="@string/save_money_tutorial"
                     android:textColor="@color/white"
-                    android:text="@string/save_money_tutorial"/>
+                    android:textSize="@dimen/sp_10" />
             </LinearLayout>
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_scrollFlags="scroll"
-            android:layout_marginTop="@dimen/dp_10"
-            android:layout_marginBottom="@dimen/dp_10"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:layout_marginStart="@dimen/dp_15">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/sp_14"
-                android:textColor="@color/white"
-                android:text="@string/two_save_money"/>
-            <RelativeLayout
-                android:layout_width="@dimen/dp_15"
-                android:layout_height="@dimen/dp_15"
-                android:layout_marginLeft="@dimen/dp_5"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/yuan_solid_state_over_dot"
-                android:layout_marginStart="@dimen/dp_5">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/sp_10"
-                    android:text="@string/one"
-                    android:layout_centerInParent="true"
-                    android:textColor="#FB5654"/>
-            </RelativeLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/sp_14"
-                android:layout_gravity="center_vertical"
-                android:textColor="@color/white"
-                android:layout_marginLeft="@dimen/dp_2"
-                android:text="@string/copy_taobao_title"/>
-            <RelativeLayout
-                android:layout_width="@dimen/dp_15"
-                android:layout_height="@dimen/dp_15"
-                android:layout_marginLeft="@dimen/dp_5"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/yuan_solid_state_over_dot"
-                android:layout_marginStart="@dimen/dp_5">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/sp_10"
-                    android:text="@string/two"
-                    android:layout_centerInParent="true"
-                    android:textColor="#FB5654"/>
-            </RelativeLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/sp_14"
-                android:textColor="@color/white"
-                android:layout_marginLeft="@dimen/dp_2"
-                android:layout_gravity="center_vertical"
-                android:text="@string/open_super_map"
-                android:layout_marginStart="@dimen/dp_2" />
-        </LinearLayout>
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/bg_top_rectangle">
+            android:background="@drawable/bg_top_rectangle"
+            android:orientation="vertical">
+
             <com.wuxiantao.wxt.ui.custom.indicator.VPindicator
                 android:id="@+id/main_taobao_indicator"
                 android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40"
                 android:layout_marginTop="@dimen/dp_5"
-                app:sameLine="false"
                 app:indicatorHeight="@dimen/dp_2"
-                android:layout_height="@dimen/dp_40"/>
+                app:sameLine="false" />
         </LinearLayout>
     </android.support.design.widget.AppBarLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
         <com.wuxiantao.wxt.ui.custom.viewpager.LazyViewPager
             android:id="@+id/main_taobao_viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:overScrollMode="never" />
+
         <ImageView
             android:id="@+id/main_taobao_topping"
             android:layout_width="@dimen/dp_30"
             android:layout_height="@dimen/dp_32"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="@dimen/dp_10"
-            android:layout_alignParentBottom="true"
-            android:src="@mipmap/topping"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/dp_10" />
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp_10"
+            android:layout_marginBottom="@dimen/dp_5"
+            android:src="@mipmap/topping" />
     </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
