--- a/app/src/main/res/layout/fragment_tao_bao_featured.xml
+++ b/app/src/main/res/layout/fragment_tao_bao_featured.xml
@@ -21,51 +21,42 @@
             app:srlAccentColor="@color/black"
             app:srlDrawableArrow="@mipmap/super_man_fly"
             app:srlPrimaryColor="@color/white" />
+
         <com.wuxiantao.wxt.ui.custom.scrollview.CustomScrollView
             android:id="@+id/taobao_featured_grid_sl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
-                <com.wuxiantao.wxt.ui.custom.recyclerview.NestRecyclerView
-                    android:id="@+id/taobao_featured_grid_rv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:overScrollMode="never" />
                 <com.youth.banner.Banner
                     android:id="@+id/fragment_tao_bao_featured_banner"
                     android:layout_width="@dimen/dp_330"
                     android:layout_height="@dimen/dp_118"
                     android:layout_gravity="center_horizontal"
-                    app:indicator_height="@dimen/dp_5"
                     android:visibility="gone"
+                    app:indicator_height="@dimen/dp_5"
                     app:indicator_width="@dimen/dp_5" />
-                <LinearLayout
-                    android:id="@+id/fragment_tao_bao_featured_layout"
+                <com.wuxiantao.wxt.ui.custom.recyclerview.NestRecyclerView
+                    android:id="@+id/taobao_featured_grid_rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never" />
+                <TextView
+                    android:id="@+id/tv_tao_bao_featured_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_15"
-                    android:orientation="horizontal"
-                    android:layout_marginStart="@dimen/dp_15">
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/dp_19"
+                    android:layout_marginTop="@dimen/dp_21"
+                    android:layout_marginBottom="@dimen/dp_21"
+                    android:text="@string/featured_products"
+                    android:textColor="#000000"
+                    android:textSize="@dimen/sp_20" />
 
-                    <ImageView
-                        android:layout_width="@dimen/dp_38"
-                        android:layout_height="@dimen/dp_29"
-                        android:src="@mipmap/main_taobao_preferred" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="@string/featured_products"
-                        android:textColor="#000000"
-                        android:layout_marginTop="@dimen/dp_4"
-                        android:textSize="@dimen/sp_20"
-                        android:textStyle="bold" />
-                </LinearLayout>
 
                 <com.wuxiantao.wxt.ui.custom.recyclerview.NestRecyclerView
                     android:id="@+id/self_employed_ver_rv"
