--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -157,4 +157,12 @@
     <color name="color_fa5858">#FA5858</color>
     <color name="color_faf6f5">#FAF6F5</color>
     <color name="color_f7f7f7">#F7F7F7</color>
+    <color name="color_6a6a6a">#6a6a6a</color>
+    <color name="color_fd6f57">#FD6F57</color>
+    <color name="color_999">#999999</color>
+    <color name="color_626161">#626161</color>
+    <color name="color_eb4a48">#EB4A48</color>
+    <color name="color_fa5758">#FA5758</color>
+    <color name="color_333">#333333</color>
+    <color name="color_666">#666666</color>
 </resources>
