--- a/app/src/main/res/layout/fragment_my_deposit.xml
+++ b/app/src/main/res/layout/fragment_my_deposit.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <RelativeLayout
+                android:id="@+id/rt_personInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/base_title_background"
