--- a/app/src/main/res/layout/activity_balance_withdraw.xml
+++ b/app/src/main/res/layout/activity_balance_withdraw.xml
@@ -1,159 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:orientation="vertical">
 
-    <include
-        android:id="@+id/balance_with_draw_title_layout"
-        layout="@layout/base_title"/>
-
+    <com.wuxiantao.wxt.ui.title.CNToolbar
+        android:id="@+id/fragment_member_center_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cn_leftImage="@mipmap/base_title_back"
+        app:cn_titleText="@string/mine_text3" />
     <com.wuxiantao.wxt.ui.custom.scrollview.ReboundScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/balance_with_draw_title_layout"
-        android:layout_marginBottom="@dimen/dp_75"
-        android:background="@color/white">
+        android:layout_marginBottom="@dimen/dp_75">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/color_faf6f5"
             android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_collapseMode="parallax"
-                android:layout_marginTop="@dimen/dp_15"
-                android:focusableInTouchMode="true"
                 android:focusable="true"
-                android:orientation="vertical">
-                <RelativeLayout
-                    android:layout_width="wrap_content"
+                android:focusableInTouchMode="true"
+                android:orientation="vertical"
+                app:layout_collapseMode="parallax">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_20"
-                    android:layout_marginStart="@dimen/dp_20">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/sp_16"
-                        android:textColor="@color/black"
-                        android:text="@string/withdraw_money"/>
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dp_10"
-                    android:layout_marginLeft="@dimen/dp_20"
-                    android:orientation="horizontal"
-                    android:layout_marginStart="@dimen/dp_20">
-                    <LinearLayout
+                    android:layout_marginLeft="@dimen/dp_14"
+                    android:layout_marginTop="@dimen/dp_13"
+                    android:layout_marginRight="@dimen/dp_14"
+                    android:background="@drawable/shape_myinnvitationcode_a"
+                    android:orientation="vertical"
+                    android:paddingLeft="@dimen/dp_4"
+                    android:paddingTop="@dimen/dp_13"
+                    android:paddingBottom="@dimen/dp_10">
+
+                    <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/tv_withdrawalamount_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/withdraw_money"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/sp_15" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/sp_24"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="@dimen/dp_5"
+                            android:layout_marginBottom="@dimen/dp_5"
+                            android:layout_toRightOf="@+id/tv_withdrawalamount_title"
+                            android:text="@string/three_day_arrival"
+                            android:textColor="@color/color_898989"
+                            android:textSize="@dimen/sp_10" />
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dp_14"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/dao"
+                                android:textColor="@color/black"
+                                android:textSize="@dimen/sp_24" />
+
+                            <EditText
+                                android:id="@+id/balance_with_draw_input"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/dp_7"
+                                android:background="@null"
+                                android:hint="@string/input_withdraw_money"
+                                android:inputType="numberDecimal"
+                                android:textColor="@color/color_010101"
+                                android:textCursorDrawable="@drawable/text_cursor"
+                                android:textSize="@dimen/sp_22" />
+                        </LinearLayout>
+
+                        <ImageView
+                            android:id="@+id/balance_with_draw_clear"
+                            android:layout_width="@dimen/dp_22"
+                            android:layout_height="@dimen/dp_22"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginEnd="@dimen/dp_20"
+                            android:layout_marginRight="@dimen/dp_20"
+                            android:background="@drawable/clear_all"
+                            android:visibility="gone" />
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dp_23"
+                        android:paddingRight="@dimen/dp_11">
+
+                        <TextView
+                            android:id="@+id/tv_balance_one_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="@string/able_withdraw_money"
                             android:textColor="@color/black"
-                            android:text="@string/dao"/>
-                        <EditText
-                            android:id="@+id/balance_with_draw_input"
+                            android:textSize="@dimen/sp_12" />
+
+                        <TextView
+                            android:id="@+id/balance_with_draw_able_money"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textCursorDrawable="@drawable/text_cursor"
-                            android:background="@null"
-                            android:textSize="@dimen/sp_22"
-                            android:inputType="numberDecimal"
-                            android:hint="@string/input_withdraw_money"/>
-                    </LinearLayout>
-                    <ImageView
-                        android:id="@+id/balance_with_draw_clear"
-                        android:layout_width="@dimen/dp_22"
-                        android:layout_height="@dimen/dp_22"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="@dimen/dp_20"
-                        android:visibility="gone"
-                        android:background="@drawable/clear_all"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="@dimen/dp_20" />
-                </RelativeLayout>
+                            android:layout_toRightOf="@+id/tv_balance_one_title"
+                            android:textColor="@color/color_fc6a57"
+                            android:textSize="@dimen/sp_13" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_toRightOf="@+id/balance_with_draw_able_money"
+                            android:text="@string/yuan"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/sp_13" />
+
+                        <com.wuxiantao.wxt.ui.custom.textview.BorderTextView
+                            android:id="@+id/balance_with_draw_all_money"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginStart="@dimen/dp_10"
+                            android:layout_marginLeft="@dimen/dp_10"
+                            android:text="@string/all_withdraw"
+                            android:textColor="#FC6A57"
+                            android:textSize="@dimen/sp_12"
+                            app:layout_borderBottom="true"
+                            app:layout_borderLeft="false"
+                            app:layout_borderRight="false"
+                            app:layout_borderTop="false"
+                            app:layout_borders="false" />
+                    </RelativeLayout>
+                </LinearLayout>
+
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/balance_with_draw_money_rv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:overScrollMode="never"/>
+                    android:layout_marginLeft="@dimen/dp_14"
+                    android:layout_marginRight="@dimen/dp_14"
+                    android:overScrollMode="never" />
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_10"
-                android:layout_marginLeft="@dimen/dp_20"
-                android:orientation="horizontal"
-                android:layout_marginStart="@dimen/dp_20">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/sp_13"
-                    android:textColor="#B7B7B7"
-                    android:text="@string/able_withdraw_money"/>
-                <TextView
-                    android:id="@+id/balance_with_draw_able_money"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/sp_13"
-                    android:textColor="#B7B7B7"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/sp_13"
-                    android:textColor="#B7B7B7"
-                    android:text="@string/yuan"/>
-                <com.wuxiantao.wxt.ui.custom.textview.BorderTextView
-                    android:id="@+id/balance_with_draw_all_money"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/sp_13"
-                    android:layout_marginLeft="@dimen/dp_10"
-                    android:textColor="#777FD1"
-                    app:layout_borders="false"
-                    app:layout_borderLeft="false"
-                    app:layout_borderRight="false"
-                    app:layout_borderTop="false"
-                    app:layout_borderBottom="true"
-                    android:text="@string/all_withdraw"
-                    android:layout_marginStart="@dimen/dp_10" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_2"
-                android:layout_marginLeft="@dimen/dp_20"
-                android:orientation="horizontal"
-                android:layout_marginStart="@dimen/dp_20">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/sp_11"
-                    android:textColor="#B7B7B7"
-                    android:text="@string/min_withdraw_money"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/sp_11"
-                    android:textColor="#B7B7B7"
-                    android:text="@string/_1_0"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/sp_11"
-                    android:textColor="#B7B7B7"
-                    android:text="@string/yuan"/>
-            </LinearLayout>
+
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/balance_with_draw_rv"
-                android:layout_marginTop="@dimen/dp_20"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_14"
+                android:layout_marginTop="@dimen/dp_23"
+                android:layout_marginRight="@dimen/dp_14" />
         </LinearLayout>
     </com.wuxiantao.wxt.ui.custom.scrollview.ReboundScrollView>
 
@@ -162,33 +182,29 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
+
         <com.wuxiantao.wxt.ui.custom.button.StateButton
             android:id="@+id/balance_with_draw_btn"
             android:layout_width="@dimen/dp_320"
             android:layout_height="@dimen/dp_40"
-            app:round="true"
-            app:unableBackgroundStartColor="#FB8E7D"
-            app:unableBackgroundCenterColor="#FB8E7D"
-            app:unableBackgroundEndColor="#FB8E7D"
-            app:unableTextColor="@color/white"
-            app:normalBackgroundStartColor="#FB8E7D"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/dp_20"
+            android:enabled="false"
+            android:padding="0dp"
+            android:text="@string/confirm_withdraw"
             app:normalBackgroundCenterColor="#FB8E7D"
             app:normalBackgroundEndColor="#FF5655"
+            app:normalBackgroundStartColor="#FB8E7D"
             app:normalOrientation="BL_TR"
             app:normalShapeType="LINEAR_GRADIENT"
             app:normalTextColor="@color/white"
-            android:enabled="false"
-            android:text="@string/confirm_withdraw"
-            android:padding="0dp"
-            android:layout_gravity="center_horizontal"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textSize="@dimen/sp_13"
-            android:layout_marginTop="@dimen/dp_5"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:text="@string/three_day_arrival"/>
+            app:round="true"
+            app:unableBackgroundCenterColor="#FB8E7D"
+            app:unableBackgroundEndColor="#FB8E7D"
+            app:unableBackgroundStartColor="#FB8E7D"
+            app:unableTextColor="@color/white" />
+
+
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
