--- a/app/src/main/res/layout/item_empty_fansi.xml
+++ b/app/src/main/res/layout/item_empty_fansi.xml
@@ -29,6 +29,7 @@
             android:layout_marginTop="@dimen/dp_15"
             android:padding="0dp"
             app:normalTextColor="@color/white"
+            android:visibility="gone"
             app:normalBackgroundStartColor="#FF8777"
             app:normalBackgroundCenterColor="#FF8777"
             app:normalBackgroundEndColor="#FB5654"
