--- a/app/src/main/res/layout/item_fansi_indirectly.xml
+++ b/app/src/main/res/layout/item_fansi_indirectly.xml
@@ -3,90 +3,45 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/item_fansi_indirectly_layout"
-    android:background="@drawable/bg_white_selector"
     android:clickable="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/item_fansi_indirectly_headimg"
-        android:layout_width="@dimen/dp_42"
-        android:layout_height="@dimen/dp_42"
+        android:id="@+id/item_fansi_directly_headimg"
+        android:layout_width="@dimen/dp_40"
+        android:layout_height="@dimen/dp_40"
+        android:layout_marginLeft="@dimen/dp_15"
         android:layout_marginTop="@dimen/dp_10"
-        android:layout_marginBottom="@dimen/dp_10"
-        android:layout_marginLeft="@dimen/dp_15"/>
+        android:layout_marginBottom="@dimen/dp_6"
+        android:src="@drawable/mine_header" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/item_fansi_directly_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginLeft="@dimen/dp_65"
-        android:layout_centerVertical="true">
-        <TextView
-            android:id="@+id/item_fansi_indirectly_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_16"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:maxEms="6"
-            android:textColor="@color/black"/>
-        <com.wuxiantao.wxt.ui.custom.button.StateButton
-            android:id="@+id/item_fansi_indirectly_vip_type"
-            android:layout_width="@dimen/dp_87"
-            android:layout_height="@dimen/dp_17"
-            android:drawableLeft="@mipmap/hat_normal_member"
-            android:drawableTint="#A7A4A4"
-            android:paddingStart="@dimen/dp_10"
-            android:paddingEnd="@dimen/dp_10"
-            android:layout_marginTop="@dimen/dp_5"
-            app:round="true"
-            app:unableTextColor="@color/grey"
-            app:unableBackgroundColor="@color/white"
-            android:padding="0dp"
-            android:textSize="@dimen/sp_10"
-            app:unableStrokeColor="@color/grey"
-            app:unableStrokeWidth="@dimen/dp_1"
-            android:enabled="false"
-            android:drawableStart="@mipmap/hat_normal_member" />
-    </LinearLayout>
+        android:layout_marginLeft="@dimen/dp_8"
+        android:layout_marginTop="@dimen/dp_24"
+        android:layout_toRightOf="@+id/item_fansi_directly_headimg"
+        android:text="小猫咪"
+        android:textColor="@color/black"
+        android:textSize="@dimen/sp_15" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/item_fansi_directly_vip_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/dp_35"
-        android:layout_centerVertical="true">
-        <TextView
-            android:id="@+id/item_fansi_indirectly_rebate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_12"
-            android:textColor="@color/grey"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:maxEms="8"
-            android:text="@string/tribute_count"/>
-        <TextView
-            android:id="@+id/item_fansi_indirectly_inviter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_12"
-            android:textColor="@color/grey"
-            android:layout_marginTop="@dimen/dp_5"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:maxEms="8"
-            android:text="@string/inviteer"/>
-    </LinearLayout>
+        android:layout_marginTop="@dimen/dp_33"
+        android:layout_marginRight="@dimen/dp_17"
+        android:text="游戏等级/任务完成"
+        android:textColor="@color/color_888"
+        android:textSize="@dimen/sp_12" />
 
-    <ImageView
-        android:layout_width="@dimen/dp_8"
-        android:layout_height="@dimen/dp_13"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/dp_15"
-        android:layout_centerVertical="true"
-        android:src="@mipmap/base_title_back"
-        android:tint="#ADADAD"
-        android:rotation="180"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/item_fansi_directly_headimg"
+        android:layout_marginLeft="@dimen/dp_14"
+        android:layout_marginRight="@dimen/dp_14"
+        android:background="@color/color_fd6f57" />
 </RelativeLayout>
