--- a/app/src/main/res/layout/item_mymember.xml
+++ b/app/src/main/res/layout/item_mymember.xml
@@ -5,22 +5,19 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_mymember_a"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableTop="@drawable/mymember_d"
-        android:drawablePadding="@dimen/dp_11"
-        android:text="额度特权"
-        android:textColor="@color/color_333"
-        android:textSize="@dimen/sp_12" />
+    <ImageView
+        android:id="@+id/iv_mymember_a"
+        android:layout_width="@dimen/dp_42"
+        android:layout_height="@dimen/dp_42"
+        android:scaleType="centerCrop"
+        android:src="@drawable/mymember_d" />
 
     <TextView
         android:id="@+id/tv_mymember_b"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="@dimen/dp_11"
         android:text="每周提现额度增加"
         android:textColor="@color/color_333"
-        android:textSize="@dimen/sp_11" />
+        android:textSize="@dimen/sp_12" />
 </LinearLayout>
