--- a/app/src/main/res/layout/fragment_bronzescroll.xml
+++ b/app/src/main/res/layout/fragment_bronzescroll.xml
@@ -23,22 +23,21 @@
                 android:id="@+id/recylerview_two"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dp_23"
+                android:layout_marginBottom="@dimen/dp_12"
                 android:layout_below="@+id/recylerview_one"
                 android:layout_marginTop="@dimen/dp_20" />
         </RelativeLayout>
     </ScrollView>
     <com.wuxiantao.wxt.ui.custom.button.StateButton
-        android:id="@+id/sbt_startHall"
+        android:id="@+id/sbt_hecheng"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_37"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="@dimen/dp_48"
-        android:layout_marginTop="@dimen/dp_23"
+        android:layout_marginTop="@dimen/dp_12"
         android:layout_marginRight="@dimen/dp_48"
         android:layout_marginBottom="@dimen/dp_29"
-        android:enabled="false"
         android:padding="0dp"
         android:text="@string/pointtocard_text10"
         android:textSize="@dimen/sp_16"
