--- a/app/src/main/res/layout/fragment_my_deposit.xml
+++ b/app/src/main/res/layout/fragment_my_deposit.xml
@@ -36,9 +36,9 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/base_title_background"
                     android:orientation="vertical"
-                    android:paddingLeft="@dimen/dp_17"
+                    android:paddingLeft="@dimen/dp_15"
                     android:paddingTop="@dimen/dp_12"
-                    android:paddingBottom="@dimen/dp_24">
+                    android:paddingBottom="@dimen/dp_18">
 
                     <TextView
                         android:id="@+id/tv_officialGroup"
@@ -67,11 +67,12 @@
                         android:layout_marginLeft="@dimen/dp_12"
                         android:layout_marginTop="@dimen/dp_31"
                         android:layout_toRightOf="@+id/iv_mine_header"
-                        android:text="小猫咪"
+                        android:text=""
                         android:textColor="@color/white"
                         android:textSize="@dimen/sp_17" />
 
                     <ImageView
+                        android:id="@+id/iv_isvip"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/dp_31"
@@ -79,13 +80,14 @@
                         android:src="@drawable/mine_gold" />
 
                     <TextView
+                        android:id="@+id/tv_mynickname"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/iv_headerName"
                         android:layout_marginLeft="@dimen/dp_12"
                         android:layout_marginTop="@dimen/dp_8"
                         android:layout_toRightOf="@+id/iv_mine_header"
-                        android:text="我的师傅：小狐狸"
+                        android:text=""
                         android:textColor="@color/white"
                         android:textSize="@dimen/sp_13" />
 
@@ -97,6 +99,7 @@
                         android:layout_marginLeft="@dimen/dp_23"
                         android:layout_marginTop="@dimen/dp_19"
                         android:text="@string/mine_text4"
+                        android:textStyle="bold"
                         android:textColor="@color/white"
                         android:textSize="@dimen/sp_14" />
 
@@ -106,12 +109,13 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tv_scrapcard_title"
                         android:layout_alignLeft="@+id/tv_scrapcard_title"
-                        android:layout_marginTop="@dimen/dp_30"
+                        android:layout_marginTop="@dimen/dp_18"
                         android:text="0"
                         android:textColor="@color/white"
                         android:textSize="@dimen/sp_16" />
 
                     <TextView
+                        android:id="@+id/tv_num_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tv_scrapcard_title"
@@ -123,9 +127,43 @@
                         android:textSize="@dimen/sp_13" />
 
                     <TextView
+                        android:id="@+id/tv_yesterday_num"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_num_title"
+                        android:layout_alignLeft="@+id/tv_scrapcard_num"
+                        android:layout_marginTop="@dimen/dp_8"
                         android:text="昨日获得70张"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp_10" />
+
+                    <com.wuxiantao.wxt.ui.custom.button.StateButton
+                        android:id="@+id/sbt_moreInfo"
+                        android:layout_width="@dimen/dp_72"
+                        android:layout_height="@dimen/dp_22"
+                        android:layout_below="@+id/tv_scrapcard_title"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="@dimen/dp_18"
+                        android:layout_marginRight="@dimen/dp_18"
+                        android:padding="0dp"
+                        android:text="@string/mine_text5"
+                        android:textSize="@dimen/sp_14"
+                        app:normalBackgroundColor="@color/white"
+                        app:normalShapeType="LINEAR_GRADIENT"
+                        app:normalTextColor="@color/color_fa5858"
+                        app:radius="@dimen/dp_10"
+                        app:round="true" />
+
+                    <TextView
+                        android:id="@+id/tv_total_num"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/sbt_moreInfo"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/dp_18"
+
+                        android:text="累计刮卡22张"
+                        android:layout_marginTop="@dimen/dp_8"
                         android:textColor="@color/white"
                         android:textSize="@dimen/sp_10" />
                 </RelativeLayout>
@@ -136,14 +174,15 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:orientation="vertical"
-                    android:paddingLeft="@dimen/dp_24"
-                    android:paddingTop="@dimen/dp_17"
-                    android:paddingBottom="@dimen/dp_17">
+                    android:paddingLeft="@dimen/dp_18"
+                    android:paddingTop="@dimen/dp_11"
+                    android:paddingBottom="@dimen/dp_12">
 
                     <TextView
                         android:id="@+id/tv_dirver"
                         android:layout_width="2dp"
-                        android:layout_height="@dimen/dp_18"
+                        android:layout_marginTop="@dimen/dp_2"
+                        android:layout_height="@dimen/dp_13"
                         android:background="@color/red" />
 
                     <TextView
@@ -152,52 +191,56 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/dp_1"
                         android:layout_toRightOf="@+id/tv_dirver"
-                        android:text="我的钱包"
+                        android:text="@string/mine_text6"
                         android:textColor="@color/black"
                         android:textSize="@dimen/sp_14" />
-
-                    <TextView
-                        android:id="@+id/tv_money_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/tv_bag_title"
-                        android:layout_marginTop="@dimen/dp_25"
-                        android:text="总余额"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/sp_11" />
-
-                    <TextView
-                        android:id="@+id/tv_crashMoney_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/tv_bag_title"
-                        android:layout_marginLeft="@dimen/dp_135"
-                        android:layout_marginTop="@dimen/dp_25"
-                        android:layout_toRightOf="@+id/tv_money_title"
-                        android:text="累计提现"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/sp_11" />
-
                     <TextView
                         android:id="@+id/tv_blanseValue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/tv_money_title"
-                        android:layout_marginTop="@dimen/dp_8"
-                        android:text="2000元"
+                        android:layout_below="@+id/tv_bag_title"
+                        android:layout_marginTop="@dimen/dp_15"
+                        android:text="0"
                         android:textColor="@color/color_fa5858"
                         android:textSize="@dimen/sp_16" />
-
                     <TextView
-                        android:id="@+id/tv_crashValue"
+                        android:id="@+id/tv_money_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/tv_crashMoney_title"
-                        android:layout_alignLeft="@+id/tv_crashMoney_title"
-                        android:layout_marginTop="@dimen/dp_8"
-                        android:text="2000元"
+                        android:layout_below="@+id/tv_blanseValue"
+                        android:layout_marginTop="@dimen/dp_4"
+                        android:text="总余额"
+                        android:textColor="@color/color_626161"
+                        android:textSize="@dimen/sp_11" />
+                    <TextView
+                        android:id="@+id/tv_crashValue"
+                        android:layout_width="@dimen/dp_80"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_bag_title"
+                        android:layout_alignParentRight="true"
+                        android:gravity="right"
+                        android:layout_marginRight="@dimen/dp_20"
+                        android:layout_marginTop="@dimen/dp_15"
+                        android:text="0"
                         android:textColor="@color/color_fa5858"
                         android:textSize="@dimen/sp_16" />
+                    <TextView
+                        android:id="@+id/tv_crashMoney_title"
+                        android:layout_width="@dimen/dp_80"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_below="@+id/tv_crashValue"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="@dimen/dp_4"
+                        android:text="累计提现"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/sp_11" />
+
+
+
+
+
+
                 </RelativeLayout>
 
                 <TextView
@@ -216,7 +259,8 @@
                     <TextView
                         android:id="@+id/tv_driver_two"
                         android:layout_width="2dp"
-                        android:layout_height="@dimen/dp_18"
+                        android:layout_marginTop="@dimen/dp_2"
+                        android:layout_height="@dimen/dp_13"
                         android:background="@color/red" />
 
                     <TextView
