--- a/app/src/main/res/layout/activity_myinvitationcode.xml
+++ b/app/src/main/res/layout/activity_myinvitationcode.xml
@@ -74,27 +74,39 @@
             android:id="@+id/tv_hearderInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_25"
             android:layout_toRightOf="@+id/iv_header"
             android:paddingLeft="@dimen/dp_11"
-            android:layout_marginTop="@dimen/dp_25"
             android:text="三十"
             android:textColor="@color/black"
             android:textSize="@dimen/sp_17" />
 
-        <ImageView
-            android:id="@+id/iv_invateCode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <RelativeLayout
+            android:id="@+id/rt_invateCode"
+            android:layout_width="@dimen/dp_261"
+            android:layout_height="@dimen/dp_261"
             android:layout_below="@+id/tv_hearderInfo"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/dp_45"
-            android:scaleType="centerCrop"
-            android:src="@drawable/invatecode" />
+            android:layout_centerHorizontal="true">
+
+            <ImageView
+                android:id="@+id/iv_invateCode"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/dp_45"
+                android:scaleType="fitXY"
+                android:src="@drawable/invatecode" />
+
+            <ImageView
+                android:id="@+id/iv_centerherader"
+                android:layout_width="@dimen/dp_50"
+                android:layout_height="@dimen/dp_50"
+                android:layout_centerInParent="true"/>
+        </RelativeLayout>
 
         <TextView
             android:layout_width="@dimen/dp_184"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/iv_invateCode"
+            android:layout_below="@+id/rt_invateCode"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/dp_15"
             android:layout_marginBottom="@dimen/dp_23"
