--- a/app/src/main/res/layout/fragment_income_hall.xml
+++ b/app/src/main/res/layout/fragment_income_hall.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/base_title_background"
-            android:paddingBottom="@dimen/dp_60">
+            android:paddingBottom="@dimen/dp_50">
 
             <ImageView
                 android:id="@+id/iv_game_header"
@@ -63,9 +63,11 @@
                 android:layout_centerVertical="true"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/dp_15"
+                android:visibility="gone"
                 android:layout_marginTop="@dimen/dp_15"
                 android:layout_marginRight="@dimen/dp_15"
                 android:max="100"
+
                 android:progress="30"
                 android:progressDrawable="@drawable/progressbar_incomehallfrgment_a" />
 
@@ -77,6 +79,7 @@
                 android:layout_alignLeft="@+id/income_hall_progress1"
                 android:layout_marginTop="@dimen/dp_6"
                 android:text="@string/game_text3"
+                android:visibility="gone"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp_13" />
 
@@ -87,6 +90,7 @@
                 android:layout_below="@+id/income_hall_progress1"
                 android:layout_alignRight="@+id/income_hall_progress1"
                 android:layout_marginTop="@dimen/dp_6"
+                android:visibility="gone"
                 android:text="距离下一等级还差 542 点经验"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp_10" />
