--- a/app/src/main/res/layout/activity_share_them.xml
+++ b/app/src/main/res/layout/activity_share_them.xml
@@ -20,7 +20,7 @@
                 android:layout_height="@dimen/dp_12"
                 android:layout_centerInParent="true"
                 android:src="@mipmap/base_title_back"
-                android:tint="@color/black" />
+                android:tint="@color/white" />
         </RelativeLayout>
 
         <TextView
