--- a/app/src/main/res/layout/activity_myinvitationcode.xml
+++ b/app/src/main/res/layout/activity_myinvitationcode.xml
@@ -6,9 +6,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50"
+        android:layout_height="@dimen/dp_80"
         android:background="@drawable/base_title_background"
-        android:paddingTop="@dimen/dp_15">
+        android:paddingTop="@dimen/dp_30">
 
         <RelativeLayout
             android:id="@+id/mine_fansi_back"
@@ -44,11 +44,23 @@
                 android:layout_marginLeft="@dimen/dp_3"
                 android:ellipsize="end"
                 android:maxEms="6"
+                android:layout_marginTop="@dimen/dp_10"
                 android:maxLines="1"
                 android:text="@string/mine_text2"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp_18" />
+
         </LinearLayout>
+        <ImageView
+            android:id="@+id/img_invateCode_share"
+            android:layout_width="@dimen/dp_28"
+            android:layout_height="@dimen/dp_28"
+            android:layout_alignParentRight="true"
+            android:src="@mipmap/share"
+            android:tint="@color/white"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp_10"
+            android:layout_gravity="center_vertical" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -92,7 +104,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/dp_45"
-                android:scaleType="centerCrop"
+                android:layout_centerInParent="true"
                 android:src="@drawable/invatecode" />
 
             <ImageView
