--- a/app/src/main/res/layout/fragment_my_deposit.xml
+++ b/app/src/main/res/layout/fragment_my_deposit.xml
@@ -29,7 +29,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
+                <View
+                    android:layout_width="match_parent"
+                    android:background="@drawable/base_title_background"
+                    android:layout_height="@dimen/dp_30"></View>
                 <RelativeLayout
                     android:id="@+id/rt_personInfo"
                     android:layout_width="match_parent"
